I have design all the box and the background color with the help of html and css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Stylesheet" href="Style.css">
-    <title>Tic Tac Toe Game</title>
+    <title>Game Tic Tac Toe</title>
 </head>
 <body>
-    
+    <main>
+    <h1>Tic Tac Toe Game</h1>
+        <div class="Container">
+            <div class="Game">
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+            </div>
+        </div>
+    </main>
 </body>
 <script src="javascript.js"></script>
 </html>
