Now i have update this by adding glow in the background

--- a/index.html
+++ b/index.html
@@ -3,26 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="Stylesheet" href="Style.css">
+    <link rel="stylesheet" href="Style.css">
     <title>Game Tic Tac Toe</title>
 </head>
 <body>
-    <main>
     <h1>Tic Tac Toe Game</h1>
-        <div class="Container">
-            <div class="Game">
-                <button class="box"></button>
-                <button class="box"></button>
-                <button class="box"></button>
-                <button class="box"></button>
-                <button class="box"></button>
-                <button class="box"></button>
-                <button class="box"></button>
-                <button class="box"></button>
-                <button class="box"></button>
-            </div>
+    <div class="container">
+        <div class="game">
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
+            <button class="box"></button>
         </div>
-    </main>
+    </div>
+    
 </body>
 <script src="javascript.js"></script>
 </html>
