--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
     <title>Game Tic Tac Toe</title>
 </head>
 <body>
-    <h1>Tic Tac Toe Game</h1>
-    <div class="container">
-        <div class="game">
-            <button class="box"></button>
-            <button class="box"></button>
-            <button class="box"></button>
-            <button class="box"></button>
-            <button class="box"></button>
-            <button class="box"></button>
-            <button class="box"></button>
-            <button class="box"></button>
-            <button class="box"></button>
+    <main>
+        <h1>Tic Tac Toe Game</h1>
+        <div class="container">
+            <div class="game">
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+            </div>
         </div>
-    </div>
-    
+        <button id="reset">Reset Game</button>
+    </main>
 </body>
 <script src="javascript.js"></script>
 </html>
