in this i have make the logic but there is some issue with

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Game Tic Tac Toe</title>
 </head>
 <body>
+    <div class="msg-winner hide">
+        <p id="winner">Winner</p>
+    </div>
     <main>
         <h1>Tic Tac Toe Game</h1>
         <div class="container">
