I have comple this project

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Game Tic Tac Toe</title>
 </head>
 <body>
-    <div class="msg-winner hide">
-        <p id="winner">Winner</p>
+    <div class="msg-container hide">
+        <p id="msg">Winner</p>
     </div>
     <main>
         <h1>Tic Tac Toe Game</h1>
